crates/cribo/tests/snapshots/execution_results@no_ops_multimodule_self_refs.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/no_ops_multimodule_self_refs/main.py
---
ExecutionResults {
    status: Success,
    stdout: "[user_manager] Added user: test_user\n[main] Processed 5 items, max value: 1000\nSuccess: 5 items processed",
    stderr: "",
}
