crates/cribo/tests/snapshots/execution_results@package_relative_import_reexport.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/package_relative_import_reexport/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Caught error: test",
    stderr: "Module with side effects loaded",
}
