crates/cribo/tests/snapshots/execution_results@pandera-polars.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pandera-polars/main.py
---
ExecutionResults {
    status: Success,
    stdout: "ca:\nshape: (3, 3)\n┌───────┬───────────────┬───────┐\n│ state ┆ city          ┆ price │\n│ ---   ┆ ---           ┆ ---   │\n│ str   ┆ str           ┆ i64   │\n╞═══════╪═══════════════╪═══════╡\n│ CA    ┆ San Francisco ┆ 16    │\n│ CA    ┆ Los Angeles   ┆ 20    │\n│ CA    ┆ San Diego     ┆ 18    │\n└───────┴───────────────┴───────┘\n\nfl:\nshape: (3, 3)\n┌───────┬─────────┬───────┐\n│ state ┆ city    ┆ price │\n│ ---   ┆ ---     ┆ ---   │\n│ str   ┆ str     ┆ i64   │\n╞═══════╪═════════╪═══════╡\n│ FL    ┆ Orlando ┆ 8     │\n│ FL    ┆ Miami   ┆ 12    │\n│ FL    ┆ Tampa   ┆ 10    │\n└───────┴─────────┴───────┘\n\nDONE",
    stderr: "",
}
