crates/cribo/tests/snapshots/execution_results@pydantic_project.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pydantic_project/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Created user: name='John Doe' email='john@example.com' age=25 is_active=True bio=None\nEmail validation passed\nUser JSON: {\"name\":\"John Doe\",\"email\":\"john@example.com\",\"age\":25,\"is_active\":true,\"bio\":null}\nCreate request: name='Jane Doe' email='jane@example.com' age=None bio=None",
    stderr: "",
}
