crates/cribo/tests/snapshots/execution_results@pyfail_class_level_cycles.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
assertion_line: 549
input_file: crates/cribo/tests/fixtures/pyfail_class_level_cycles/main.py
---
ExecutionResults {
    status: Success,
    stdout: "User: Alice\nAdmin: Bob",
    stderr: "",
}
